Fixed animation on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -408,6 +408,25 @@ h2 {
 }
 
 /* For mobile screens (up to 600px) */
+@media (max-width: 700px) {
+  .pokeball {
+    position: absolute;
+    margin-left: 15px;
+    left: 5px;
+    top: 10px;
+    z-index: 100;
+  
+    img {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      top: 35px
+    }
+  }
+
+}
+
+/* For mobile screens (up to 600px) */
 @media (max-width: 600px) {
   .pokemon-display-grid {
     grid-template-columns: 1fr; /* 1 card across */
